rollouts/sample-nginx-process/helloworld.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: helloworld
spec: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  namespace: helloworld
  labels:
    app: hello-world
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: helloworld
        image: quay.io/redhatgov/rust-hello-world:0.1.3
        ports:
        - containerPort: 8000
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: helloworld
spec:
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  selector:
    app: hello-world
